--- a/hw-js-08/css/styles.css
+++ b/hw-js-08/css/styles.css
@@ -16,8 +16,9 @@ body {
 }
 
 .gallery {
+  width: 70%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
   max-width: 1440px;
   padding: 0;
